[project]
name = "mle-vroom"
version = "0.1.0"
description = "A barebones maximum likelihood estimation framework in Python."
authors = [{ name="Adam Bauer", email="ambauer@uchicago.edu" }]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "numba",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.semantic_release.remote]
name = "origin"
type = "github"
version_variable = "src/mle-vroom/__init__.py:__version__"
tag_format = "v{verison}"
version_toml = ["pyproject.toml:project.version"]
upload_to_pypi = false
upload_to_release = true
build_command = "python -m build"
branch = "main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["src/mle_package/__init__.py"]
tag_format = "v$version"
update_changelog_on_bump = true
